<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="repo"
                type="com.ledwon.jakub.githubapiclientkotlin.data.model.Repo"/>

        <variable
                name="noDescriptionString"
                type="String"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/text_view_repo_details_repo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="8dp"
                android:text="@{repo.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="1dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/forked"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@{String.valueOf(repo.fork)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="1dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/forks_count"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@{String.valueOf(repo.forksCount)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="1dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/watchers_count"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@{String.valueOf(repo.watchers)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="1dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/language"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@{repo.language}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="1dp" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/link"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                    android:autoLink="web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@{repo.htmlUrl}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="1dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/descrpition"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
                android:id="@+id/text_view_repo_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@{repo.description != null ? repo.description : noDescriptionString}" />
    </LinearLayout>
</layout>